avoid flickering

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,6 +12,10 @@ body {
   padding-top: 20px;
 }
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 
 /* CUSTOMIZE THE HEADER
 -------------------------------------------------- */
